css/screen.css
@font-face {
  font-family: "Open Sans";
  src: local("Open Sans"), url("../../fonts/eduVPN/OpenSans-Regular.woff2") format("woff2");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Open Sans";
  src: local("Open Sans Bold"), url("../../fonts/eduVPN/OpenSans-Bold.woff2") format("woff2");
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: "Open Sans";
  src: local("Open Sans Italic"), url("../../fonts/eduVPN/OpenSans-Italic.woff2") format("woff2");
  font-weight: normal;
  font-style: italic;
}

@font-face {
  font-family: "Open Sans";
  src: local("Open Sans Bold Italic"), url("../../fonts/eduVPN/OpenSans-BoldItalic.woff2") format("woff2");
  font-weight: bold;
  font-style: italic;
}

* {
  box-sizing: border-box;
}

body {
  font-family: "Open Sans", sans-serif;
  font-size: 18px;
  background-color: #ededed;
  margin: 0;
  padding: 0;
  width: 100%;
  line-height: 1.4;
  color: #505050;
}

h1 {
  font-size: 48px;
}

h2 {
  font-size: 38px;
}

h3 {
  font-size: 28px;
}

h4 {
  font-size: 24px;
}

h1, h2, h3, h4 {
  color: #000;
  margin-bottom: 0.5em;
  line-height: 1.25;
}

a, summary {
  color: #216aed;
  font-weight: bold;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

button, input, textarea, select {
  font-family: inherit;
  font-size: 1em;
  line-height: inherit;
}

pre, code {
  font-size: inherit;
}

button, summary {
  cursor: pointer;
}

header {
  text-align: end;
  padding: 0 1em;
  background-color: #222;
}

header ul.languageSwitcher {
  margin: 0.25em 0.5em;
  display: inline-block;
}

header ul.languageSwitcher li {
  display: inline-block;
}

header ul.languageSwitcher button, header form.logout button {
  border: 0;
  color: #fff;
  background-color: #222;
  padding: 0.5em 0.5em;
}

header ul.languageSwitcher button:hover, header form.logout button:hover {
  background-color: #4e4e4e;
  border-radius: 2em;
  text-decoration: underline;
}

header form.logout {
  display: inline;
  margin: 0 0.5em;
}

header form.logout button {
  font-weight: bold;
}

nav {
  text-align: center;
  background-color: #fff;
  background-image: url("../../img/eduVPN/logo.png");
  background-repeat: no-repeat;
  background-size: 169px 50px;
  background-position: 50% 1em;
  padding: calc(50px + 2em) 0 0 0;
}

nav ul {
  margin: 0;
  display: inline-block;
}

nav ul li {
  display: inline-block;
  padding: 0;
  margin: 1.5em 0;
}

nav ul li a {
  padding: 1em 1.5em;
  color: #216aed;
  font-weight: bold;
}

nav ul li.active a {
  color: #216aed;
  font-weight: bold;
  border-bottom: 4px solid #216aed;
}

nav ul li a:hover {
  background-color: #ededed;
  border-radius: 2em;
}

nav ul li.active a:hover {
  border-radius: 0;
  background-color: #fff;
}

footer {
  background-color: #222;
}

footer p {
  margin: 0;
  padding: 1em;
  text-align: center;
  color: #fff;
}

form.frm label {
  font-weight: bold;
  display: block;
  margin: 0.5em 0 0.3em 0;
}

form.frm {
  width: 100%;
}

form.frm button {
  border: 0;
  border-radius: 2em;
  color: #fff;
  background-color: #216aed;
  padding: 0.5em 1.5em;
  font-weight: bold;
}

form.frm button.warning {
  background-color: #ff9900;
}

form.frm select, form.frm input[type=text], form.frm input[type=password], form.frm textarea {
  width: 100%;
  border: 1px solid #ddd;
  border-radius: 0.5em;
  padding: 0.5em;
  display: block;
}

fieldset {
  border: 0;
  margin: 1em 0;
  padding: 0;
}

table.tbl {
  width: 100%;
  border: 1px solid #ededed;
  border-radius: 0.5em;
  margin: 0.5em 0;
  padding: 0.5em;
}

ul li, ol li {
  margin: 0.25em;
}

table.tbl th {
  text-align: start;
}

table.tbl td.text-right {
  text-align: end;
}

table.tbl td, table.tbl th {
  padding: 0.75em;
}

table.tbl ul {
  padding: 0 0 0 1em;
}

table.tbl form.frm {
  margin: 0;
}

table.tbl form.frm button {
  margin: 0;
}

main h1 {
  background-color: #e24301;
  color: #fff;
  text-align: center;
  padding: 1em 0 3em 0;
  margin-top: 0;
}

main div.content h1 {
  /* hide the h1 in the div.content for now until it is removed from the templates... */
  display: none;
}

main div.content {
  min-height: 75vh;
  max-width: 60em;
  border-radius: 1em 1em 0 0;
  padding: 3em 1em;
  margin: -5em auto 0 auto;
  background-color: #fff;
}

p.warning, p.error, p.plain {
  padding: 1.2em;
  border-radius: 0.5em;
}

p.plain {
  color: #505050;
  background-color: #ededed;
}

span.plain, span.success, span.error {
  padding: 0.5em;
  border-radius: 0.5em;
  font-weight: bold;
  display: inline-block;
}

span.plain {
  color: #505050;
  background-color: #ededed;
}

span.success {
  color: #fff;
  background-color: #16a566;
}

span.error {
  color: #fff;
  background-color: #ed3415;
}

p.warning {
  color: #fff;
  background-color: #ff9900;
}

p.error {
  color: #fff;
  background-color: #ed3415;
}

main div.auth {
  margin: 0 auto;
  max-width: 20em;
}

ul.profileList {
  list-style: none;
  padding: 0;
}

ul.profileList li {
  margin: 0.5em 0;
}

dl dt {
  margin: 0.5em 0;
  display: block;
  font-weight: bold;
}

figcaption {
  font-size: 85%;
  text-align: center;
  font-style: italic;
  padding: 1em;
}

svg.appUsage {
  display: block;
  margin: 0 auto;
  max-width: 40%;
}

ul.appUsage {
  list-style: none;
  padding: 0;
}

ul.appUsage li {
  display: inline-block;
  margin: 0.5em;
}

.pieLegend {
  color: #fff;
  font-weight: bold;
  padding: 0.5em;
  margin: 0.5em;
}

/* @see https://learnui.design/tools/data-color-picker.html#palette */
.pieColor1 {
  fill: #003f5c;
  background-color: #003f5c;
}

.pieColor2 {
  fill: #2f4b7c;
  background-color: #2f4b7c;
}

.pieColor3 {
  fill: #665191;
  background-color: #665191;
}

.pieColor4 {
  fill: #a05195;
  background-color: #a05195;
}

.pieColor5 {
  fill: #d45087;
  background-color: #d45087;
}

.pieColor6 {
  fill: #f95d6a;
  background-color: #f95d6a;
}

.pieColor7 {
  fill: #ff7c43;
  background-color: #ff7c43;
}

.pieColor8 {
  fill: #ffa600;
  background-color: #ffa600;
}

blockquote {
  margin-left: 0;
  padding: 1em;
  background-color: #ededed;
  border-left: 0.2em solid #e24301;
  border-radius: 0 0.5em 0.5em 0;
}

blockquote:lang(ar-MA) {
  margin-right: 0;
  border-left: 0;
  border-right: 0.2em solid #e24301;
  border-radius: 0 0.5em 0.5em 0;
  border-radius: 0.5em 0 0 0.5em;
}

ul.apps {
  list-style: none;
  padding: 0;
  text-align: center;
}

ul.apps li {
  display: inline-block;
  padding: 2em;
}

ul.apps li a, span.Windows, span.macOS, span.Android, span.iOS, span.Linux {
  display: block;
  background-repeat: no-repeat;
  background-size: 64px 64px;
  background-position: 50% 0;
  min-height: calc(64px + 2em);
  padding: calc(64px + 0.5em) 0 0 0;
  min-width: 64px;
}

ul.apps li a.Windows, span.Windows {
  background-image: url("../../img/eduVPN/app/Windows.png");
}

ul.apps li a.macOS, span.macOS {
  background-image: url("../../img/eduVPN/app/macOS.png");
}

ul.apps li a.Android, span.Android {
  background-image: url("../../img/eduVPN/app/Android.png");
}

ul.apps li a.iOS, span.iOS {
  background-image: url("../../img/eduVPN/app/iOS.png");
}

ul.apps li a.Linux, span.Linux {
  background-image: url("../../img/eduVPN/app/Linux.png");
}

span.Windows, span.macOS, span.Android, span.iOS, span.Linux {
  margin: 2em;
  text-align: center;
  font-weight: bold;
}

p.lead {
  text-align: center;
  padding: 0.5em;
  font-size: 150%;
  color: #e24301;
  font-style: italic;
}

table.stats {
  border-collapse: separate;
  border-spacing: 3px 0;
  width: 90%;
}

table.stats td, table.stats th {
  width: 1em;
  text-align: center;
  line-height: 0.5;
}

table.stats tbody th span, table.stats tfoot th span {
  writing-mode: vertical-rl;
  font-weight: normal;
  white-space: nowrap;
  line-height: 1em;
  padding-top: 0.5em;
  font-size: 85%;
}

table.stats tbody th span {
  writing-mode: vertical-rl;
}

table.stats tbody td:not(:empty) {
  background-color: #9a2e00;
  color: transparent;
}

table.stats th.index {
  box-sizing: content-box;
  vertical-align: top;
  padding: 0 0.5em;
  border-top: 1px solid #888;
}

table.stats th.index span {
  font-weight: bold;
}

@media screen and (min-width: 800px) {
  main div.content {
    padding: 3em 7em;
  }
  nav {
    text-align: end;
    background-position: 2% 50%;
    padding: 1em 0.5em 1em 169px;
    min-height: calc(50px + 2em);
  }
  nav:lang(ar-MA) {
    background-position: 98% 50%;
    padding: 1em 15em 1em 0;
  }
}

